# lib_import

./: .gitignore  Cargo.toml  README.md  build.rs
libfoo/: CMakeLists.txt
libfoo/include/foo/: foo.h
libfoo/src/: foo.cpp
src/: bindings.rs  main.rs  wrappers.rs
